...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/night"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:text="?attr/Night"
                    android:textAllCaps="false"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
...
                    app:layout_constraintBottom_toTopOf="@id/guidelineLH1">


                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/light"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:text="?attr/Light"
                    android:textAllCaps="false"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV2"
...
                    app:layout_constraintBottom_toTopOf="@id/guidelineLH1">


                </androidx.appcompat.widget.AppCompatButton>

                    <TextView
                        android:id="@+id/currentLanguage"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="?attr/profileField_color"
                        android:gravity="center"
                        android:text="?attr/language"
                        android:textAlignment="center"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.95" />

                <Button
                    android:id="@+id/sign_out"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="?attr/sign_out"
                    android:backgroundTint="?attr/gradientPrimary_color"
...
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV6"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV7"
                    app:layout_constraintTop_toBottomOf="@id/guidelineLH3"
                    app:layout_constraintBottom_toTopOf="@id/guidelineLH4"/>

                <Button
                    android:id="@+id/delete_account"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="?attr/delete_account"
                    android:textSize="15sp"
                    android:backgroundTint="?attr/gradientPrimary_color"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.7"/>

                <Button
                    android:id="@+id/french"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="?attr/french_button"
                    android:backgroundTint="?attr/gradientPrimary_color"
                    android:textColor="?attr/text_color"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.8"/>

                <Button
                    android:id="@+id/english"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="?attr/english_button"
                    android:backgroundTint="?attr/gradientPrimary_color"
                    android:textColor="?attr/text_color"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.9"/>

                <Button
                    android:id="@+id/italian"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="?attr/italian_button"
                    android:backgroundTint="?attr/gradientPrimary_color"
                    android:textColor="?attr/text_color"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="1"/>

                <Button
                    android:id="@+id/german"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="?attr/german_button"
                    android:backgroundTint="?attr/gradientPrimary_color"
                    android:textColor="?attr/text_color"
...
