...
    <string name="unrankedStart">Unranked game started</string>

    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_facebook">Facebook</string>
    <string name="providers_twitter">Twitter</string>
    <string name="providers_email">Email</string>
    <string name="providers_email_link">Email link</string>
    <string name="providers_phone">Phone</string>
    <string name="providers_anonymous">Anonymous</string>
    <string name="providers_apple">Apple</string>
    <string name="providers_microsoft">Microsoft</string>
    <string name="providers_yahoo">Yahoo</string>
...
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="launch_auth_ui">Launch Auth UI</string>
    <string name="resolve_merge_conflict">Resolve Merge Conflict</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tkt">tkt</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
...

    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="health_point">Health Point</string>
    <string name="click_to_view_stats">(click to view stats)</string>
    <string name="saved_night_mode">saved night mode</string>
    <string name="saved_language_mode">0</string>
    <string name="see_graphs">See graphs</string>
    <string name="take_a_picture">Scan barcode</string>
    <string name="enter_manually">Enter manually</string>

    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
...
