...
    tools:context=".HomeScreenActivity"
    android:background="?attr/fragView_color"
    android:id="@+id/HomeView">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:background="?attr/fragView_color"
        android:backgroundTint="?attr/text_color"
        app:itemTextColor="?attr/text_color"
        app:itemIconTint="?attr/text_color"
        android:layout_height="0dp"
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />
        <!-- Set the menu, so that it takes the shape of the one created -->

    <fragment
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/my_nav"
...
