...
        android:icon="@drawable/ic_baseline_qr_code_24"/>
    <item
        android:id="@+id/gamesMenu"
        android:title="Games"
        android:icon="@drawable/ic_baseline_gamepad_24"/>
    <item
        android:id="@+id/SignedInFragment"
        android:title="Settings"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>
